# avr-mcu

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
packs/atmega/: AT90CAN128.atdf  AT90CAN32.atdf  AT90CAN64.atdf  AT90PWM1.atdf  AT90PWM161.atdf  AT90PWM216.atdf  AT90PWM2B.atdf  AT90PWM316.atdf  AT90PWM3B.atdf  AT90PWM81.atdf  AT90USB1287.atdf  AT90USB162.atdf  AT90USB646.atdf  AT90USB647.atdf  AT90USB82.atdf  ATmega128.atdf  ATmega1280.atdf  ATmega1281.atdf  ATmega1284.atdf  ATmega1284RFR2.atdf  ATmega128RFA1.atdf  ATmega128RFR2.atdf  ATmega1608.atdf  ATmega1609.atdf  ATmega162.atdf  ATmega164A.atdf  ATmega164P.atdf  ATmega164PA.atdf  ATmega165A.atdf  ATmega165P.atdf  ATmega165PA.atdf  ATmega168.atdf  ATmega168A.atdf  ATmega168P.atdf  ATmega168PA.atdf  ATmega168PB.atdf  ATmega169A.atdf  ATmega169P.atdf  ATmega169PA.atdf  ATmega16A.atdf  (+82 more)
src/: current.rs  extra_info.rs  lib.rs  load.rs  model.rs  pack.rs
