[package]
name = "avr-mcu"
version = "0.3.5"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = """
Pragmatic structures for all AVR microcontrollers
"""

license = "MIT"
repository = "https://github.com/avr-rust/avr-mcu"
documentation = "https://docs.rs/avr-mcu"

keywords = ["avr", "mcu", "io", "constants", "pins"]
categories = ["embedded"]


[dependencies]
json = "0.12"
lazy_static = "1.4"
target-cpu-fetch = "0.1"
xmltree = "0.10"

